# Arduino-Serial-Plotter

./: .gitignore  CMakeLists.txt  README.md
ArduinoSerialPlotter/: ArduinoSerialPlotter.cpp  ArduinoSerialPlotter.h  CMakeLists.txt  SerialClass.h  json_writer.h  nuklear.h  nuklear_glfw_gl4.h  real_vector.h  simdjson.cpp  simdjson.h  utf8_json.h  xxhash.h
ArduinoSerialPlotter/imgui/: implot_items.cpp
